--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <!-- Download Resume Section -->
     <section class="text-center mt-5">
         <a
-            href="MANOJ SHARANAPPA SHEKHSINDHI (1).pdf"
+            href="MANOJ_SHARANAPPA_SHEKHSINDHI_1.pdf"
             download
             class="btn btn-primary btn-lg px-5 py-3"
         >
